# MIX

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Valgrind.cmake  valgrind.supp
include/mix/: assembler.h  instruction.h  interpreter.h  io.h  memory.h  mix.h  registers.h  types.h
perf/: CMakeLists.txt  perf_main.c
src/: assembler.c  instruction.c  interpreter.c  io.c  main.c  memory.c  registers.c
tests/: CMakeLists.txt  test.h  test_benchmark.c  test_benchmark3.c  test_interpreter.c  test_josephus.c  test_main.c  test_memory.c  test_registers.c
tests/data/: 1.mix  2.expected  2.mix  3.expected  3.mix
